<resources>
    <string name="app_name">CLAVE PAES Docentes</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ScanDoc SM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_revisiones">Revisiones realizadas</string>
    <string name="menu_escanear">Escanear evaluaciones</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_syncro">Actualizar datos</string>

    <string name="qr_activity_prompt">Escanear código QR</string>
    <string name="settings_progress_title">Procesando..</string>
    <string name="settings_progress_mensaje">Obteniendo información de la camara.</string>
    <string name="revision_resultados_mensaje">resultados</string>
    <string name="revision_sinresultados_titulo">Sin revisiones todavía</string>
    <string name="revision_sinresultados_mensaje">Las revisiones se crean al escanear una evaluación</string>
    <string name="revision_eliminacion_ok">Revisiones eliminadas correctamente</string>
    <string name="revision_eliminacion_pregunta">¿Realmente desea eliminar las revisiones seleccionadas?</string>
    <string name="login_label_rut">RUT</string>
    <string name="login_label_dv">DV</string>
    <string name="login_label_pass">CONTRASEÑA</string>
    <string name="login_label_btn">ACCEDER</string>
    <string name="login_label_title">SMCONECTA</string>
    <string name="login_error_rut">Debe ingresar su rut</string>
    <string name="login_error_clave">Debe ingresar su contraseña</string>
    <string name="login_progress_title">Procesando...</string>
    <string name="login_progress_message">Verificando cuenta del usuario</string>
    <string name="login_progress_message_sincro">Sincronizando información</string>
    <string name="login_progress_message_sincro_detail">Verificando información desde el servidor</string>
    <string name="login_progress_message_sincro_error">Error al sincronizar la información</string>
    <string name="login_progress_message_sincro_success">Datos sincronizados correctamente</string>
    <string name="login_errorlogin_message">Rut y/o contraseña no válidas</string>
    <string name="login_erroruser_message">El usuario no se ha autenticado</string>
    <string name="login_successlogin_message">Sesión creada correctamente</string>
    <string name="login_successlogout_message">Sesión cerrada correctamente</string>
    <string name="login_errorlogout_message">No fue posible cerrar la sesión. Inténtelo nuevamente</string>
    <string name="login_errorrespuesta_message">Error. Verifique su conexión a internet</string>
    <string name="logout_title">¿Realmente desea cerrar su sesión?</string>
    <string name="logout_message">Si cierra sesión, es posible que pierda los resultados que no haya subido</string>
    <string name="resultado_progress_title">Procesando...</string>
    <string name="resultado_progress_message">Obteniendo clases relacionadas</string>
    <string name="resultado_progress_message_guardando">Guardando resultados</string>
    <string name="resultado_progress_message_eliminando">Desvinculando resultados</string>
    <string name="resultado_seleccionclase_null">Debe seleccionar una clase</string>
    <string name="resultado_clases_empty">No existen clases relacionadas para subir los resultados."</string>
    <string name="resultado_guardado_ok">Resultados guardados correctamente</string>
    <string name="resultado_eliminado_ok">Resultados desvinculados correctamente</string>
    <string name="resultado_guardado_error">Error al guardar los resultados</string>
    <string name="resultado_eliminado_error">Error al desvincular los resultados</string>
    <string name="resultado_guardadoduplicado_titulo">Error al intentar guardar los datos</string>
    <string name="resultado_guardadoduplicado_error">La clase seleccionada ya cuenta con un revisión de la evaluación %1$s en su cuenta de SMCONECTA</string>
    <string name="resultado_titulo_modal">Selecciona un curso</string>
    <string name="resultado_eliminacion_pregunta">¿Realmente desea eliminar los resultados seleccionados?</string>
    <string name="resultado_eliminacion_pregunta_resultados">¿Realmente desea desvincular los resultados?</string>
    <string name="resultado_eliminacion_mensaje_resultados">Los resultados quedarán desvinculados de la Clase %1$s de su libro %2$s en su cuenta de SMCONECTA</string>
    <string name="resultado_eliminacion_ok">Resultados eliminados correctamente</string>
    <string name="resultado_sinresultados_titulo">Sin resultados todavía</string>
    <string name="resultado_sinresultados_mensaje">Los resultados se crean al escanear una evaluación</string>
    <string name="camara_mensaje_inicial_titulo">Para escanear la evaluación</string>
    <string name="camara_mensaje_inicial_mensaje">Posiciona la imagen sobre el recuadro de la hoja de respuestas</string>


    <string name="video_progress_title">Procesando...</string>
    <string name="video_progress_message">Cargando video desde el servidor</string>
    <string name="video_progress_error_message">Error al reproducir el video, revise su conexión a internet</string>

    <string name="camara_clase">Clase</string>


    <string name="NEXT">SIGUIENTE</string>
    <string name="GOT_IT">COMENCEMOS</string>
    <string name="btnEvaluaciones">Revisiones</string>
    <string name="btnEscanear">Escanear</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="oksave">Resultado guardado correctamente.</string>
    <string name="errorsave">Error al guardar el resultado.</string>
    <string name="okupdate">Resultado actualizado correctamente.</string>
    <string name="errorupdate">Error al actualizar el resultado.</string>
    <string name="errorscaneo">Debes marcar un número de lista.</string>
    <string name="alertTitulo">Resultado duplicado</string>
    <string name="alertMensaje">Ya existe un resultado asociado a este alumno. ¿Deseas reemplazar el resultado?</string>
    <string name="alertTituloSalida">Revisión en proceso</string>
    <string name="alertMensajeSalida">Se está realizando la revisión de una evaluación ¿Deseas terminarla ahora?</string>
    <string name="tituloActividadRevision">Escanear evaluación</string>
    <string name="tituloActividadEvaluacion">Revisiones</string>
    <string name="tituloActividadResultado">Resultados</string>
    <string name="tituloClases">Mis clases</string>
    <string name="tituloProgreso">Procesando...</string>
    <string name="mensajeProgreso">Guardando información</string>
    <string name="menuSeleccionar">Seleccionar Todo</string>
    <string name="erroData">Código Qr no encontrado.</string>
    <string name="erroDataAlumno">Código Qr no encontrado. Verifica tu conexión a Internet.</string>
    <string name="menuLogin">Login</string>
    <string name="menuEscanear">Escanear nuevamente</string>
    <string name="menuEscanearAlumno">Escanear QR</string>
    <string name="menuUpResultados">Subir resultados</string>
    <string name="menuEliminarResultados">Desvincular resultados</string>
    <string name="menuSalir">Salir de la revisión</string>


    <string name="permisosDenegados">Ir a configuración y habilitar permisos</string>

    <string name="permisosCancelados">Algunos permisos son requeridos para trabajar con la aplicación, por favor conceda dichos permisos</string>
    <string name="permisosBtn">Ir a configuración</string>
    <string name="scannerTxtErrorRut">Rut inválido</string>
    <string name="scannerTxtValidating">Validando...</string>
    <string name="scannerTxtInfo">Alinear cuadrados con los de la hoja de respuesta</string>
    <string name="scannerTxtResult">%1$s %2$s/%3$s %4$s</string>
    <string name="title_activity_courses">Mis cursos</string>
    <string name="title_activity_quizzes">Evaluaciones</string>
    <string name="title_activity_students">Mis estudiantes</string>
    <string name="title_activity_result">Estudiante</string>
    <string name="title_activity_scanner">Escanear</string>
    <string name="text_answers">preguntas</string>
    <string name="text_no_results">Sin resultados</string>
    <string name="text_results">Resultados</string>
    <string name="text_unlock">LIBERAR</string>
    <string name="text_unlock_down">Liberar</string>
    <string name="text_btn_accept">Aceptar</string>
    <string name="text_btn_cancel">CANCELAR</string>
    <string name="title_error_dialog_scan">Error al intentar escanear</string>
    <string name="text_error_data_anwsers_scan">La configuración de la hoja de respuestas no es correcta.</string>
    <string name="text_error_token">El token de acceso no pudo ser generado</string>
    <string name="title_dialog_proccess">Procesando ...</string>
    <string name="text_dialog_release_quiz">Liberando ensayo</string>
    <string name="text_error_release_quiz">Error, no se pudo liberar el ensayo</string>
    <string name="text_success_release_quiz">El ensayo se ha liberado correctamente</string>
    <string name="text_error_validate_release_quiz">Debe ingresar un fecha y hora de inicio</string>
    <string name="text_error_not_quiz_release_quiz">No se encontro el ensayo de destino</string>
    <string name="title_dialog_release_quiz">Programar fecha de liberación</string>
    <string name="subtitle_dialog_release_quiz">Si deseas liberar el ensayo sin fecha de término, deja en blanco los campos de fecha.</string>
    <string name="check_dialog_release_quiz">Notificar a los estudiantes del curso.</string>
    <string name="text_progress_upload_results">Subiendo resultados</string>
    <string name="text_success_upload_results">Los resultados se han subido correctamente</string>
    <string name="text_error_upload_results">Error al subir los resultados</string>
    <string name="text_error_upload_results_no_items">No existen resultados para subir</string>
    <string name="text_total_students">Estudiantes: %1$s</string>
    <string name="text_btn_download_sheet">Descargar hoja de respuestas</string>
    <string name="text_success_download_sheet">Descarga iniciada</string>
    <string name="text_dialog_download_sheet">Descargando hoja de respuestas...</string>
    <string name="text_btn_upload_result">Subir resultados</string>
    <string name="text_no_result_message">No existen resultados</string>
    <string name="text_btn_image">Captura</string>
    <string name="text_menu_1">Mi espacio Clave</string>
    <string name="text_menu_2">Videos tutoriales</string>
    <string name="text_menu_3">Ayuda</string>
    <string name="text_menu_4">Cerrar sesión</string>
    <string name="text_menu_5">Créditos</string>
    <string name="text_title_no_item">Sin resultados</string>
    <string name="text_message_no_item">Lamentablemente no tenemos nada que mostrar.</string>
    <string name="text_corrects">Correctas</string>
    <string name="text_incorrects">Incorrectas</string>
    <string name="text_omitted">Sin responder</string>
</resources>
