<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_revisiones"
            android:icon="@drawable/ic_icono_realizadas"
            android:title="@string/menu_revisiones" />
        <item
            android:id="@+id/nav_escanear"
            android:icon="@drawable/ic_icono_escanear"
            android:title="@string/menu_escanear" />

    </group>
    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_ayuda" />

    </group>

</menu>
