<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10">

    <View
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/paes_color_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/transparent" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_xlarge"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo_paes" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_label_rut"

                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_label_dv"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:layout_weight="1"
                            android:inputType="text"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@color/grey_60"
                            android:textStyle="bold"
                            android:theme="@style/EditText.Grey" />
                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_label_pass"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_60"
                    android:textStyle="bold"
                    android:theme="@style/EditText.Grey" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_darker"
                    android:text="@string/login_label_btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

    </LinearLayout>

</RelativeLayout>
